[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 533.0

[node name="Header" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
text = "Loop-in-out"
align = 1

[node name="Body" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 256.0
margin_bottom = 431.0
size_flags_vertical = 6
custom_constants/separation = 150

[node name="Players Grid" type="GridContainer" parent="PanelContainer/VBoxContainer/Body"]
margin_right = 256.0
margin_bottom = 118.0
custom_constants/vseparation = 10
columns = 2

[node name="Player1Label" type="Label" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
text = "Gracz 1: "

[node name="Player1TextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_left = 60.0
margin_right = 256.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 10

[node name="Player2Label" type="Label" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_top = 39.0
margin_right = 56.0
margin_bottom = 53.0
text = "Gracz 2: "

[node name="Player2TextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_left = 60.0
margin_top = 34.0
margin_right = 256.0
margin_bottom = 58.0
size_flags_horizontal = 3
max_length = 10

[node name="TargerLabel" type="Label" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_top = 71.0
margin_right = 56.0
margin_bottom = 85.0
text = "Cel: "

[node name="TargetOptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_left = 60.0
margin_top = 68.0
margin_right = 256.0
margin_bottom = 88.0
text = "100"
items = [ "100", null, false, 0, null, "101", null, false, 1, null, "170", null, false, 2, null, "501", null, false, 3, null ]
selected = 0

[node name="PlayersLabel" type="Label" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_top = 101.0
margin_right = 56.0
margin_bottom = 115.0
text = "Graczy:"

[node name="PlayersOption" type="OptionButton" parent="PanelContainer/VBoxContainer/Body/Players Grid"]
margin_left = 60.0
margin_top = 98.0
margin_right = 256.0
margin_bottom = 118.0
text = "2"
items = [ "1", null, false, 0, null, "2", null, false, 1, null ]
selected = 1

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Body"]
margin_top = 268.0
margin_right = 256.0
margin_bottom = 318.0
custom_constants/separation = 10

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer/Body/Buttons"]
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Start"

[node name="RulesButton" type="Button" parent="PanelContainer/VBoxContainer/Body/Buttons"]
margin_top = 30.0
margin_right = 256.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Zasady gry"

[node name="Footer" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "Dart Bialystok poleca!"
[connection signal="item_selected" from="PanelContainer/VBoxContainer/Body/Players Grid/PlayersOption" to="." method="_on_PlayersOption_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Body/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Body/Buttons/RulesButton" to="." method="_on_RulesButton_pressed"]
